[web] Do not use core/Section for list of issues
Since core/Section is reserving space for icons, it looks a bit weird
when used inside a dialog for displaying a list of items. Too much space
on the left.

Thus, stop using it by now until the component allows conditionally
reserve such an space or not depending on whatever, a prop or parent.

Also, start using a plain HTML <ul> element instead of the PF/HelperText
for wrapping the list of issues.

--- a/web/src/assets/styles/patternfly-overrides.scss
+++ b/web/src/assets/styles/patternfly-overrides.scss
@@ -236,6 +236,15 @@ table td > .pf-v5-c-empty-state {
   padding-inline: 0;
 }
 
+ul {
+  list-style: initial;
+  margin-inline: var(--spacer-normal);
+
+  li {
+    padding-block-end: var(--spacer-small);
+  }
+}
+
 @media screen and (width <= 768px) {
   .pf-m-grid-md.pf-v5-c-table tr:where(.pf-v5-c-table__tr):not(.pf-v5-c-table__expandable-row) {
     padding-inline: 0;
